--- a/index.html
+++ b/index.html
@@ -3,21 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Elogios para Você</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Elogios para minha Princesa</title>
 </head>
 <body>
-
     <header>
-        <h1>Elogios Surpresa</h1>
+        <h1>Elogios para minha Princesa</h1>
     </header>
 
-    <div class="container">
-        <button id="changeCompliment">Trocar Elogio</button>
-        <div id="compliment">
-            <span class="compliment-text"></span>
-        </div>
-    </div>
+    <section id="automatic-compliment">
+        <p id="compliment-text">Você é incrível!</p>
+    </section>
+
+    <section id="photo-gallery">
+        <!-- Adicione suas fotos aqui -->
+    </section>
+
+    <footer>
+        <p>&copy; 2023 Elogios para [Nome da Sua Namorada]</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
